src/test/ui/did_you_mean/issue-38147-2.stderr
error: cannot borrow immutable borrowed content `*self.s` as mutable
  --> $DIR/issue-38147-2.rs:17:9
   |
12 |     s: &'a String
   |     ------------- use `&'a mut String` here to make mutable
...
17 |         self.s.push('x');
   |         ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

